# financial_agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: cache.py  cache_policy.py  config.py  llm.py  main.py  models.py  security.py  utils.py
app/agent/: graph.py  nodes.py  prompts.py  resilience.py  state.py
app/api/: routes.py
docs/: Doxyfile  api.md  architecture.md  conf.py  configuration.md  deployment.md  index.md  production-readiness.md
docs/adr/: 001-langgraph-explicit-router.md  002-ollama-openai-abstraction.md  003-tavily-search-tool.md  index.md  template.md
docs/superpowers/: index.md
docs/superpowers/plans/: 2026-03-29-internet-search-agent.md
docs/superpowers/specs/: 2026-03-29-internet-search-agent-design.md
tests/acceptance/: test_agent.py
tests/e2e/: test_api_container.py
tests/unit/: test_api.py  test_cache_policy.py  test_llm.py  test_router.py  test_search_node.py  test_security.py  test_utils.py
tools/: chat.py
